--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,9 @@
+color-dark { color: rgb(40, 15, 0); }
+color-accent-light { color: rgb(146, 26, 29); }
+color-accent-dark { color: rgb(100, 22, 0); }
+color-primary { color: rgb(248, 224, 152); }
+color-light { color: rgb(254, 245, 247); }
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -5,24 +11,26 @@ html, body {
 }
 
 body {
-	color: #333;
+	background-color: rgb(40, 15, 0);
+	color: rgb(254, 245, 247);
 	margin: 0;
-	padding: 8px;
+	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(248, 224, 152);
 	text-decoration: none;
 }
 
 a:hover {
 	text-decoration: underline;
+	color: rgb(248, 224, 152);
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(248, 224, 152);
 }
 
 label {
