--- a/static/static/global.css
+++ b/static/static/global.css
@@ -1,8 +1,63 @@
-color-dark { color: rgb(40, 15, 0); }
-color-accent-light { color: rgb(146, 26, 29); }
-color-accent-dark { color: rgb(100, 22, 0); }
-color-primary { color: rgb(248, 224, 152); }
-color-light { color: rgb(254, 245, 247); }
+:root {
+	--color-blue-light: hsla(203, 100%, 88%, 1);
+	--color-blue-dark: hsla(203, 100%, 25%, 1);
+	--color-red-light: hsla(16, 100%, 50%, 1);
+	--color-red-dark: hsla(16, 100%, 37%, 1);
+	--color-green-anchor: hsla(77, 100%, 50%, 1);
+	--color-neutral-darkest: hsla(77, 33%, 7%, 1);
+	--color-neutral-dark: hsla(77, 5%, 19%, 1);
+	--color-neutral-medium: hsla(77, 2%, 48%, 1);
+	--color-neutral-light: hsla(77, 6%, 84%, 1);
+	--color-neutral-lightest: hsla(77, 16%, 93%, 1);
+}
+
+
+/* Color Theme Swatches in Hex */
+.color-blue-light-hex { color: #C2E7FF; }
+.color-blue-dark-hex { color: #004D80; }
+.color-green-anchor-hex { color: #B3FF00; }
+.color-red-light-hex { color: #FF4800; }
+.color-red-dark-hex { color: #BF3600; }
+
+/* Color Theme Swatches in RGBA */
+.color-blue-light-rgba { color: rgba(194, 231, 255, 1); }
+.color-blue-dark-rgba { color: rgba(0, 77, 128, 1); }
+.color-green-anchor-rgba { color: rgba(179, 255, 0, 1); }
+.color-red-light-rgba { color: rgba(255, 72, 0, 1); }
+.color-red-dark-rgba { color: rgba(191, 54, 0, 1); }
+
+/* Color Theme Swatches in HSLA */
+.color-blue-light-hsla { color: hsla(203, 100%, 88%, 1); }
+.color-blue-dark-hsla { color: hsla(203, 100%, 25%, 1); }
+.color-green-anchor-hsla { color: hsla(77, 100%, 50%, 1); }
+.color-red-light-hsla { color: hsla(16, 100%, 50%, 1); }
+.color-red-dark-hsla { color: hsla(16, 100%, 37%, 1); }
+
+
+
+
+
+/* Color Theme Swatches in Hex */
+.color-neutral-darkest-hex { color: #161A0D; }
+.color-neutral-dark-hex { color: #31332E; }
+.color-neutral-medium-hex { color: #7E8079; }
+.color-neutral-light-hex { color: #D7D9D4; }
+.color-neutral-lightest-hex { color: #F1F2ED; }
+
+/* Color Theme Swatches in RGBA */
+.color-neutral-darkest-rgba { color: rgba(22, 26, 13, 1); }
+.color-neutral-dark-rgba { color: rgba(49, 51, 46, 1); }
+.color-neutral-medium-rgba { color: rgba(126, 128, 121, 1); }
+.color-neutral-light-rgba { color: rgba(215, 217, 212, 1); }
+.color-neutral-lightest-rgba { color: rgba(241, 242, 237, 1); }
+
+/* Color Theme Swatches in HSLA */
+.color-neutral-darkest-hsla { color: hsla(78, 33%, 7%, 1); }
+.color-neutral-dark-hsla { color: hsla(83, 5%, 19%, 1); }
+.color-neutral-medium-hsla { color: hsla(77, 2%, 48%, 1); }
+.color-neutral-light-hsla { color: hsla(83, 6%, 84%, 1); }
+.color-neutral-lightest-hsla { color: hsla(72, 16%, 93%, 1); }
+
 
 html, body {
 	position: relative;
@@ -11,8 +66,8 @@ html, body {
 }
 
 body {
-	background-color: rgb(40, 15, 0);
-	color: rgb(254, 245, 247);
+	background-color: var(--color-neutral-light);
+	color: var(--color-neutral-darkest);
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -20,17 +75,17 @@ body {
 }
 
 a {
-	color: rgb(248, 224, 152);
+	color: var(--color-red-dark);
 	text-decoration: none;
 }
 
 a:hover {
 	text-decoration: underline;
-	color: rgb(248, 224, 152);
+	color: var(--color-red-dark);
 }
 
 a:visited {
-	color: rgb(248, 224, 152);
+	color: var(--color-red-dark);
 }
 
 label {
